--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+/* FONTS */
+@font-face {
+    font-family: 'Imperial';
+    src: url('src/assets/fonts/NeueHaasUnica-Regular.ttf') format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 @layer components {
     .headers {
         @apply p-3 px-6 uppercase bg-imperial-blue text-sm tracking-wide;
